--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@babel/core": "^7.20.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@mui/lab": "^5.0.0-alpha.106",
     "@types/react": "^18.0.25",
+    "fbjs": "^3.0.4",
     "material-ui": "^0.11.1",
     "moment": "^2.29.4",
     "react": "^18.1.0",
